--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         id="navbar-example"
       >
         <div class="container">
-          <a class="navbar-brand logo" href="#">Geek</a>
+          <a class="navbar-brand logo" href="#">Albert Walkers</a>
           <button
             class="navbar-toggler"
             type="button"
